# evolution-taskwarrior

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  example-module.c  m-calendar-ui.c  m-calendar-ui.h  m-mail-ui.c  m-mail-ui.h  m-msg-composer-extension.c  m-msg-composer-extension.h  m-shell-view-extension.c  m-shell-view-extension.h  m-task-ui.c  m-task-ui.h  m-utils.c  m-utils.h  task.c  task.h  task_module.c
